--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Solution Engineer: 
                 </li>
                 <br/>
-                <ul> Member of City's Apps, Analytics, and Automation team (AAA) | Power Platform and Salesforce Administrator for City of Long Beach. Management of Low Code platforms including Salesforce, Microsoft Power Platform, and UiPath. Co-lead citywide Data Learning CommunityCo-lead citywide Power Hour sessions. Supervise work of a Jr. Solution Engineer and contract developer.</li>
+                <ul> Member of City's Apps, Analytics, and Automation team (AAA) | Power Platform and Salesforce Administrator for City of Long Beach. Management of Low Code platforms including Salesforce, Microsoft Power Platform, and UiPath. Co-lead citywide Data Learning Community. Co-lead citywide Power Hour sessions. Supervise work of a Jr. Solution Engineer and contract developer.</li>
                     
                     <p>Worked as Power Platform co-lead to implement:
                         <ul>
